--- a/requirements.txt.ipynb
+++ b/requirements.txt.ipynb
@@ -13,13 +13,13 @@
    "id": "fb7609a5-dafd-482c-9192-8e54dd827900",
    "metadata": {},
    "source": [
-    "Flight ticket prices are often unpredictable. The price for a flight today might be very different tomorrow, which makes planning trips challenging for travelers.\n",
+    "→ Flight ticket prices are often unpredictable. The price for a flight today might be very different tomorrow, which makes planning trips challenging for travelers.\n",
     "\n",
-    "Using Machine Learning, we aim to predict flight ticket prices. This can help:\n",
+    "→ Using Machine Learning, we aim to predict flight ticket prices. This can help:\n",
     "\n",
-    "Travelers plan their journeys and budget better.\n",
+    "→ Travelers plan their journeys and budget better.\n",
     "\n",
-    "Airlines understand pricing patterns and optimize fare strategies."
+    "→ Airlines understand pricing patterns and optimize fare strategies."
    ]
   },
   {
@@ -37,19 +37,19 @@
    "source": [
     "Task 1: Prepare a complete data analysis report on the given dataset.\n",
     "\n",
-    "Explore features such as airline, source, destination, departure/arrival times, duration, stops, etc.\n",
+    "→ Explore features such as airline, source, destination, departure/arrival times, duration, stops, etc.\n",
     "\n",
-    "Handle missing values and perform feature engineering.\n",
+    "→ Handle missing values and perform feature engineering.\n",
     "\n",
-    "Visualize trends and relationships between features and prices.\n",
+    "→ Visualize trends and relationships between features and prices.\n",
     "\n",
     "Task 2: Create a predictive model to estimate future flight prices.\n",
     "\n",
-    "Build a machine learning model using Scikit-Learn.\n",
+    "→ Build a machine learning model using Scikit-Learn.\n",
     "\n",
-    "Create an interactive app using Streamlit for user inputs and predictions.\n",
+    "→ Create an interactive app using Streamlit for user inputs and predictions.\n",
     "\n",
-    "Enable customers to plan trips effectively based on predicted fares."
+    "→ Enable customers to plan trips effectively based on predicted fares."
    ]
   },
   {
